--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -5,8 +5,8 @@
 name: Generate Cypress Report
 on:
   push:
-    branches:
-      - 'master'
+    branches: 
+      - 'main'
 
 jobs:
   cypress-test:
